# Grapevine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: smoke_cpu.yaml  train_gpu.yaml
experiments/baseline/: results.md  run_baseline.py
grapevine/: __init__.py  cli.py
grapevine/diagnostics/: __init__.py  hacking.py
grapevine/envs/: __init__.py  base.py  hidden_profile.py  split_evidence.py
grapevine/eval/: __init__.py  metrics.py  view.py
grapevine/rewards/: __init__.py  reward.py
grapevine/rollout/: __init__.py  client.py  engine.py
grapevine/train/: __init__.py  grpo.py  hf_client.py  nemo_rl_notes.md  reward.py
tests/: test_diagnostics.py  test_eval.py  test_hidden_profile.py  test_rewards.py  test_rollout.py  test_split_evidence.py  test_train_smoke.py
